fix var already declared

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -7,11 +7,11 @@
 <meta name="msapplication-TileColor" content="#00aba9">
 <meta name="theme-color" content="#000000">
 <script>
-    let delete_order
-    delete_order = setInterval(function(){
+    
+    window.delete_order = setInterval(function(){
         try {
             document.querySelector("#docs-app > div.container.relative.flex.bg-white > aside > div:nth-child(4)").setAttribute("style", "opacity: 0;");
-            clearInterval(delete_order)
+            clearInterval(window.delete_order)
             setTimeout(function(){
                 document.querySelector("#docs-app > div.container.relative.flex.bg-white > aside > div:nth-child(4)").remove()
             }, 1000)
